--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@koa/multer": "^2.0.2",
     "bcrypt": "^5.0.0",
     "glob": "^7.1.6",
+    "images": "^3.2.3",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.3.0",
